fix spacing on buttons without icons

--- a/src/style.css
+++ b/src/style.css
@@ -105,23 +105,18 @@ body {
 .popify-btn {
   background-color: rgb(218, 218, 218);
   padding: .5em 1.25em;
-  border: solid 2px transparent;
+  border: none;
   cursor: pointer;
   border-radius: .2rem;
   font-size: 1.1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: .5rem;
-  transition: 250ms ease;
-  transition-property: border, background-color;
+  transition: background-color 250ms ease;
   min-width: max-content;
+  text-align: center;
 }
 
 .popify-btn:where(:hover, :focus) {
-  background-color: rgb(175, 175, 175);
+  background-color: rgb(230, 230, 230);
   outline: none;
-  border: solid 2px #0bcaff;
 }
 
 .popify-icon.icon-error::before {
